# nmac-cpp

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/basic_usage/: CMakeLists.txt  basic_usage.cpp
examples/println/: CMakeLists.txt  println_examples.cpp
examples/vec_macro/: CMakeLists.txt  vec_macro.cpp
include/nmac/: macro_expander.hpp  nmac.hpp  tokenizer.hpp  vec.hpp
include/nmac/dsl/: fmt_core.hpp  format_string.hpp  println.hpp  println_eval.hpp  println_literal.hpp  println_pattern.hpp  println_template.hpp
src/: CMakeLists.txt  nmac.cpp
tests/: CMakeLists.txt
tests/pattern_matching/: CMakeLists.txt  test_pattern_matching.cpp
